# markovmodus

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml  publish.yml
docs/: api.rst  conf.py  index.rst  introduction.md  usage.rst
notebooks/: dynamic_transition_rates_example.ipynb  progression_comparison.ipynb  proliferation_example.ipynb  qad_example.ipynb  quickstart.ipynb  time_dependent_transition_rates.ipynb
src/markovmodus/: __init__.py  api.py  config.py  io.py  simulation.py
tests/: conftest.py  test_config.py  test_data_processing.py  test_generation.py  test_simulation.py
